# proxy-hopper-v2

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  cliff.toml
.github/: .release-please-manifest.json  branch-protection.sh  release-please-config.json
.github/workflows/: ci.yml  next.yml  release.yml
charts/proxy-hopper/: Chart.yaml  values.yaml
charts/proxy-hopper/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  grafana-dashboards.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docker/: Dockerfile  Dockerfile.redis
docs/: docs.json  index.mdx  integration-modes.mdx  introduction.mdx  overview.mdx  quickstart.mdx  style.css
docs/backends/: memory.mdx  redis.mdx
docs/concepts/: backends.mdx  proxy-modes.mdx
docs/concepts/backends/: redis.mdx
docs/concepts/proxy-modes/: connect-tunnel.mdx  http-proxy.mdx  url-forwarding.mdx
docs/configuration/: ip-pools.mdx  proxy-providers.mdx  reference.mdx  server.mdx  targets.mdx
docs/deployment/: docker.mdx  kubernetes.mdx
docs/development/: architecture.mdx  testing.mdx
docs/observability/: logging.mdx  metrics.mdx
examples/docker-compose/auth-api-keys/: README.md  config.yaml  docker-compose.yml
examples/docker-compose/auth-oidc/: Dockerfile  README.md  config.yaml  docker-compose.yml
examples/docker-compose/local-backend/: Dockerfile  README.md  config.yaml  docker-compose.yml
examples/docker-compose/local-redis/: Dockerfile  README.md  config.yaml  docker-compose.yml
examples/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  redis.yaml  secret.yaml  service.yaml
examples/kubernetes/dashboards/: apply-dashboards.sh  grafana-dashboards-configmap.yaml  kustomization.yaml  proxy-hopper-admin.json  proxy-hopper-user.json
kube-test/: Dockerfile  README.md  configmap.yaml  dashboards-configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml  servicemonitor.yaml
python_modules/proxy-hopper/: CHANGELOG.md  README.md  config.example.yaml  pyproject.toml
python_modules/proxy-hopper-redis/: README.md  pyproject.toml
python_modules/proxy-hopper-redis/src/proxy_hopper_redis/: __init__.py  backend.py
python_modules/proxy-hopper-redis/tests/: conftest.py  test_redis_backend.py
python_modules/proxy-hopper-testserver/: README.md  pyproject.toml
python_modules/proxy-hopper-testserver/src/proxy_hopper_testserver/: __init__.py  proxy.py  upstream.py
python_modules/proxy-hopper-testserver/tests/: conftest.py  test_auth_integration.py  test_integration.py  test_ip_management.py
python_modules/proxy-hopper/src/proxy_hopper/: __init__.py  admin.py  auth.py  cli.py  config.py  dynamic_config.py  handlers.py  logging_config.py  metrics.py  models.py  pool.py  pool_store.py  prober.py  repository.py  server.py  target_manager.py
python_modules/proxy-hopper/src/proxy_hopper/auth/: __init__.py  admin.py
python_modules/proxy-hopper/src/proxy_hopper/backend/: __init__.py  base.py  memory.py
python_modules/proxy-hopper/src/proxy_hopper/config/: __init__.py  loader.py  models.py  normalization.py
python_modules/proxy-hopper/src/proxy_hopper/graphql/: __init__.py  _auth.py  context.py  inputs.py  mutations.py  queries.py  types.py
python_modules/proxy-hopper/src/proxy_hopper/identity/: __init__.py  config.py  fingerprint.py  identity.py  store.py
python_modules/proxy-hopper/tests/: conftest.py  test_auth.py  test_backend_memory.py  test_cli.py  test_config.py  test_dynamic_config.py  test_graphql.py  test_handlers.py  test_helpers.py  test_identity.py  test_prober.py  test_repository.py  test_server.py  test_server_hot_reload.py  test_target_manager.py
python_modules/tests/: README.md  conftest.py  pyproject.toml  test_backend_contract.py  test_pool_contract.py
