[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "proxy-hopper-redis"
dynamic = ["version"]
description = "Redis-backed IP pool backend for Proxy Hopper — enables HA multi-instance deployments"
requires-python = ">=3.12"
dependencies = [
    "proxy-hopper>=0.1.0",
    "redis[hiredis]>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "fakeredis>=2.20",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
search_parent_directories = true
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+(?:[._-](?:a|alpha|b|beta|c|pre|preview|rc)[0-9.]*)?)$"
# Used when building outside a git repo (e.g. Docker, CI source tarballs).
# Override with SETUPTOOLS_SCM_PRETEND_VERSION_FOR_PROXY_HOPPER_REDIS env var.
fallback_version = "0.0.0.dev0"

[tool.hatch.build.targets.wheel]
packages = ["src/proxy_hopper_redis"]

[tool.uv.sources]
proxy-hopper = { path = "../proxy-hopper", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
