[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "proxy-hopper"
dynamic = ["version"]
description = "Rotating proxy server that routes requests through a pool of external proxy IP addresses"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "click>=8.1",
    "fastapi>=0.111",
    "httpx>=0.27",
    "bcrypt>=4.0",
    "prometheus-client>=0.20",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyJWT>=2.8",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
uvloop = [
    "uvloop>=0.19; sys_platform != 'win32'",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "aioresponses>=0.7",
]

[project.scripts]
proxy-hopper = "proxy_hopper.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# The package lives in a subdirectory; tell setuptools-scm to walk up to the
# repo root to find the .git directory.
search_parent_directories = true
# Matches stable tags (v0.1.0) and pre-release tags with the 'pre' identifier
# produced by github-tag-action (v0.1.1-pre.1).  The 'packaging' library
# normalises 'pre' → 'rc', so v0.1.1-pre.1 becomes 0.1.1rc1 (PEP 440).
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+(?:[._-](?:a|alpha|b|beta|c|pre|preview|rc)[0-9.]*)?)$"
# Used when building outside a git repo (e.g. Docker, CI source tarballs).
# Override with SETUPTOOLS_SCM_PRETEND_VERSION_FOR_PROXY_HOPPER env var.
fallback_version = "0.0.0.dev0"

[tool.hatch.build.targets.wheel]
packages = ["src/proxy_hopper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
